[gd_scene load_steps=5 format=3 uid="uid://dvdwh20ev1oyq"]

[ext_resource type="Script" path="res://Main/Home/home.gd" id="1_u5pls"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w04jd"]
bg_color = Color(0, 0.721569, 0.290196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmtd3"]
bg_color = Color(0, 0.337255, 0.823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uha6d"]
bg_color = Color(0, 0.713726, 0.419608, 1)

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u5pls")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.027451, 0.0588235, 1)
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 221.0
offset_top = 114.0
offset_right = 932.0
offset_bottom = 576.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(711, 462)
layout_mode = 2

[node name="Add" type="Button" parent="."]
layout_mode = 0
offset_left = 544.0
offset_top = 24.0
offset_right = 610.0
offset_bottom = 90.0
theme_override_styles/normal = SubResource("StyleBoxFlat_w04jd")

[node name="bg2" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.0
offset_top = -246.0
offset_right = 246.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.121569, 0.172549, 1)

[node name="GoalNameEdit" type="LineEdit" parent="bg2"]
layout_mode = 0
offset_left = -2.0
offset_top = 66.0
offset_right = 490.0
offset_bottom = 162.0
theme_override_font_sizes/font_size = 64
placeholder_text = "Goal Name"
flat = true

[node name="GoalNameEdit2" type="LineEdit" parent="bg2"]
layout_mode = 0
offset_left = -2.0
offset_top = 306.0
offset_right = 490.0
offset_bottom = 436.0
theme_override_font_sizes/font_size = 64
placeholder_text = "Enter Date"
flat = true

[node name="LoadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1088.0
offset_right = 1152.0
offset_bottom = 64.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dmtd3")
text = "Load"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
theme_override_styles/normal = SubResource("StyleBoxFlat_uha6d")
text = "Save
"

[connection signal="pressed" from="Add" to="." method="_on_add_pressed"]
[connection signal="text_submitted" from="bg2/GoalNameEdit" to="." method="_on_goal_name_edit_text_submitted"]
[connection signal="text_submitted" from="bg2/GoalNameEdit2" to="." method="_on_goal_name_edit_2_text_submitted"]
[connection signal="pressed" from="LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
